# rules_nodejs

./: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  common.bazelrc  defs.bzl  package.json  providers.bzl  rules_typescript_providers.patch
.bazelci/: presubmit.yml
.circleci/: config.yml  env.sh
e2e/jasmine/: BUILD.bazel  package.json
e2e/karma/: package.json
e2e/karma_stack_trace/: package.json
e2e/karma_typescript/: package.json
e2e/ts_auto_deps/: package.json
e2e/ts_devserver/: BUILD.bazel  package.json  protractor.on-prepare.js
e2e/ts_devserver/genrule/: BUILD.bazel
e2e/ts_devserver/subpackage/: BUILD.bazel
e2e/ts_library/: WORKSPACE  package.json
e2e/ts_library/reference_types_directive/: BUILD.bazel  tsconfig_types.ts
e2e/tsconfig_extends/: package.json
e2e/typescript_2.7/: package.json
e2e/typescript_2.8/: package.json
e2e/typescript_2.9/: package.json
e2e/typescript_3.0/: package.json
e2e/typescript_3.1/: lib.ts  main.ts  package.json
examples/angular/: WORKSPACE
examples/angular/src/: BUILD.bazel  rollup.config.js
examples/app/: BUILD.bazel  package.json
examples/bazel_managed_deps/: package.json
examples/program/: package.json
examples/protocol_buffers/: BUILD.bazel  package.json  protractor.on-prepare.js
examples/vendored_node/: package.json
examples/web_testing/: WORKSPACE  package.json
examples/webapp/: WORKSPACE  package.json
internal/bazel_integration_test/: test_runner.js
internal/common/: BUILD.bazel  expand_into_runfiles.bzl  node_module_info.bzl  params_file.bzl  runfiles.js  sources_aspect.bzl
internal/common/test/: BUILD.bazel  params_file.spec.js
internal/coverage/: BUILD.bazel  lcov_merger.js  lcov_merger.ts
internal/e2e/rollup_code_splitting/: BUILD.bazel  dep1.js  dep2.js  dep3.js  lib1.js  lib2.js  main1.js  main2.js
internal/e2e/rollup_fine_grained_deps/: BUILD.bazel  check.js
internal/golden_file_test/: golden_file_test.bzl
internal/jasmine_node_test/: BUILD.bazel
internal/js_library/: js_library.bzl
internal/linker/: index.js  link_node_modules.bzl  link_node_modules.js  link_node_modules.ts
internal/linker/test/: BUILD.bazel  link_node_modules.spec.js  link_node_modules.spec.ts  package.json
internal/linker/test/integration/: BUILD.bazel  program.js  run_program.sh  test.sh
internal/linker/test/multi_node_modules/: BUILD.bazel  test.js
internal/node/: BUILD.bazel  launcher.sh  node.bzl  node_launcher.sh  node_loader.js  node_patcher.js  node_repositories.bzl  node_require_patch.js
internal/node/test/: BUILD.bazel  bootstrap_with_patch.js  env.spec.js  expand_variables.spec.js  nodejs_toolchain_test.bzl
internal/npm_install/: BUILD.bazel  generate_build_file.js  generate_build_file.ts  index.js  node_module_library.bzl  npm_install.bzl
internal/npm_install/test/: BUILD.bazel  bazel_bin_test.sh
internal/npm_package/: BUILD.bazel  npm_package.bzl
internal/providers/: external_npm_package_info.bzl  node_runtime_deps_info.bzl
internal/rollup/: BUILD.bazel  package.json  rollup.config.js  rollup_bundle.bzl  system.config.js  tsc-directory.js  uglify-wrapped.js
internal/web_package/: BUILD.bazel
scripts/: clean_all.sh  clean_e2e.sh  clean_examples.sh  clear_yarn_cache.sh  packages.sh  publish_snapshots.sh
toolchains/node/: BUILD.bazel  node_toolchain.bzl
