# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@npm_bazel_protractor//:index.bzl", "protractor_web_test_suite")
load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")

exports_files([
    "red-body-style.css",
    "tsconfig.json",
])

ts_library(
    name = "app",
    srcs = ["app.ts"],
)

ts_devserver(
    name = "devserver",
    # This is the path we'll request from the browser, see index.html
    serving_path = "/bundle.min.js",
    # The devserver can serve our static files too
    static_files = ["index.html"],
    # We'll collect all the devmode JS sources from these TypeScript libraries
    deps = [":app"],
)

ts_library(
    name = "e2e",
    testonly = 1,
    srcs = ["app_e2e_test.ts"],
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//protractor",
    ],
)

protractor_web_test_suite(
    name = "e2e_test",
    data = [
        "@npm//@bazel/protractor",
        "@npm//protractor",
        "@npm//zone.js",
    ],
    on_prepare = ":protractor.on-prepare.js",
    server = ":devserver",
    deps = [":e2e"],
)
