load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")
load("//internal/common:copy_to_bin.bzl", "copy_to_bin")
load("//internal/common:params_file.bzl", "params_file")

licenses(["notice"])

package(default_testonly = 1)

sh_test(
    name = "copy_to_bin_tests",
    srcs = ["copy_to_bin_tests.sh"],
    data = [
        ":a",
        "//third_party/github.com/bazelbuild/bazel-skylib:tests/unittest.bash",
    ],
    deps = ["@build_bazel_rules_nodejs//third_party/github.com/bazelbuild/bazel/tools/bash/runfiles"],
)

copy_to_bin(
    name = "a",
    srcs = ["foo/bar/a.txt"],
)

filegroup(
    name = "locations_in",
    srcs = [
        "params_file.spec.js",
        ":a",
        "//:package.json",
    ],
)

params_file(
    name = "params_file",
    out = ":params_file.out",
    args = [
        "$(SOME_TEST_ENV)",
        "$(execpaths :locations_in)",
        "$(execpath //:package.json)",
        "$(rootpaths :locations_in)",
        "$(rootpath //:package.json)",
        "$(locations :locations_in)",
        "$(location //:package.json)",
    ],
    data = [
        ":locations_in",
        "//:package.json",
    ],
)

nodejs_test(
    name = "params_file_test",
    data = [":params_file.out"],
    entry_point = ":params_file.spec.js",
    templated_args = [
        "$(TARGET_CPU)",
        "$(COMPILATION_MODE)",
        "$(rootpath :params_file.out)",
    ],
)
