load(":rule.bzl", "linked")

linked(
    name = "example",
    deps = [
        "//internal/linker/test/integration/pkg_a",
        "@npm//semver",
    ],
)

sh_test(
    name = "test",
    srcs = [
        "test.sh",
    ],
    data = [
        ":example",
        ":program.js",
        "//internal/linker:link_node_modules.js",
        # TODO: we shouldn't need to repeat this here. There's a bug somewhere
        "@npm//semver",
    ],
)
